<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.multibit.exchange</groupId>
    <artifactId>mbex-matching-engine</artifactId>
    <version>develop-SNAPSHOT</version>

    <url>http://localhost:10888</url>

    <name>MultiBit Exchange</name>
    <description>The MultiBit Exchange Platform</description>
    <inceptionYear>2013</inceptionYear>

    <!-- Set the version levels for linked dependencies -->
    <properties>
        <dropwizard.version>0.6.2</dropwizard.version>
        <axon.version>2.1</axon.version>
        <mongojack.version>2.0.0</mongojack.version>
        <openid4java.version>0.9.8</openid4java.version>
        <jetty.version>8.1.10.v20130312</jetty.version>
        <atmosphere.version>2.0.6</atmosphere.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m -ea -Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <enableRulesSummary>false</enableRulesSummary>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>

            <!-- Shade plugin is required to make a "slim" JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>
                                        org.multibit.exchange.infrastructure.adaptor.web.config.MultiBitExchangeApiWebService
                                    </mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <id>onejar-maven-plugin.googlecode.com</id>
            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>

        <!-- Dropwizard framework -->
        <!-- Core functionality -->
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-core</artifactId>
            <version>${dropwizard.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Authentication support -->
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-auth</artifactId>
            <version>${dropwizard.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- HTML Freemarker views support -->
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-views</artifactId>
            <version>${dropwizard.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- REST client support for upstream data -->
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-client</artifactId>
            <version>${dropwizard.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Use Scribe for OAuth2 -->
        <dependency>
            <groupId>org.scribe</groupId>
            <artifactId>scribe</artifactId>
            <version>1.3.3</version>
            <scope>compile</scope>
        </dependency>

        <!-- Use AXON framework for commands/events/eventbus/eventstore -->
        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-core</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-test</artifactId>
            <version>${axon.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-mongo</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-amqp</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-distributed-commandbus</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-integration</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-monitoring-jmx</artifactId>
            <version>${axon.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.axon-guice</groupId>
            <artifactId>axon-guice</artifactId>
            <version>1.0.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- MongoDB -->
        <dependency>
            <groupId>org.mongojack</groupId>
            <artifactId>mongojack</artifactId>
            <version>${mongojack.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>2.2.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- Guice for Jersey-friendly dependency injection -->
        <dependency>
            <groupId>com.hubspot.dropwizard</groupId>
            <artifactId>dropwizard-guice</artifactId>
            <version>${dropwizard.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- OpenID heavy lifting -->
        <dependency>
            <groupId>org.openid4java</groupId>
            <artifactId>openid4java</artifactId>
            <version>${openid4java.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>guice</artifactId>
                    <groupId>com.google.inject</groupId>
                </exclusion>
            </exclusions>
            <scope>compile</scope>
        </dependency>

        <!-- Date time presentation for social media -->
        <dependency>
            <groupId>org.ocpsoft.prettytime</groupId>
            <artifactId>prettytime</artifactId>
            <version>3.2.5.Final</version>
            <scope>compile</scope>
        </dependency>

        <!-- Atmosphere for websocket / streaming -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlets</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-websocket</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.atmosphere</groupId>
            <artifactId>atmosphere-jersey</artifactId>
            <version>${atmosphere.version}</version>
            <scope>compile</scope>
        </dependency>


        <!-- TEST DEPENDENCIES -->

        <!-- Standard unit testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <!-- Provides fake data for domain objects -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>0.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Embedded MongoDB for functional testing -->
        <dependency>
            <groupId>de.flapdoodle.embed</groupId>
            <artifactId>de.flapdoodle.embed.mongo</artifactId>
            <version>1.28</version>
            <scope>compile</scope>
        </dependency>

        <!-- Resource testing support -->
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-testing</artifactId>
            <version>${dropwizard.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>1.1.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.1.5</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>
